--- a/index.html
+++ b/index.html
@@ -39,14 +39,7 @@
 
       <div class="about__desctriptionBox">
         <h1 class="about__welcome">Witaj! Jestem Marcin</h1>
-        <p class="about__desctription">Swoją przygodę z programowaniem zacząłem już w technikum. Jednak po drodze wiele
-          spraw przeszkadzało mi na skupieniu się jedynie na tej pasji. W swoim życiu poznawałem Pascala i C# (w
-          szkole),
-          C# i Jave (we własnym zakresie zaraz po szkole). JavaScript pojawił się w moim życiu całkiem niedawno i skradł
-          moje serce. HTML i CSS również jest nowością w mojej przygodzie z programowaniem. We wrześniu 2019r.
-          postanowiłem cały swój wolny czas poświęcić na naukę HTML, CSS i JS. Jest to mój wielki powrót do
-          programowania
-          po latach! :)</p>
+        <p class="about__desctription">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis id mollitia corporis molestias dolorum repellendus rem pariatur, expedita harum quas nihil tenetur fugiat veniam animi voluptate obcaecati facilis ut laboriosam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam repellat veritatis temporibus alias deleniti, velit perferendis eius voluptatum corrupti eveniet nostrum voluptatem blanditiis ratione magni beatae amet, sit cumque! Quasi?</p>
       </div>
     </section>
 
