--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 
       <div class="about__desctriptionBox">
         <h1 class="about__welcome">Witaj! Jestem Marcin</h1>
-        <p class="about__desctription">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis id mollitia corporis molestias dolorum repellendus rem pariatur, expedita harum quas nihil tenetur fugiat veniam animi voluptate obcaecati facilis ut laboriosam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam repellat veritatis temporibus alias deleniti, velit perferendis eius voluptatum corrupti eveniet nostrum voluptatem blanditiis ratione magni beatae amet, sit cumque! Quasi?</p>
+        <p class="about__desctription">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+          Debitis id mollitia corporis molestias dolorum repellendus rem pariatur, expedita harum quas nihil 
+          tenetur fugiat veniam animi voluptate obcaecati facilis ut laboriosam. Lorem ipsum dolor sit amet 
+          consectetur adipisicing elit. Numquam repellat veritatis temporibus alias deleniti, velit perferendis 
+          eius voluptatum corrupti eveniet nostrum voluptatem blanditiis ratione magni beatae amet, sit cumque! Quasi?</p>
       </div>
     </section>
 
